--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,12 @@ services:
       POSTGRES_PASSWORD: "peter"
       PGDATA: "/var/lib/postgresql/data/pgdata"
     volumes:
-      #- ./initdb:/docker-entrypoint-initdb.d
+      - ./input_data:/docker-entrypoint-initdb.d
       - pg_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U peter -d junior_script"]
+      test: ["CMD-SHELL", "pg_isready -U peter -d taxi"]
       interval: 30s
       timeout: 10s
       retries: 3
